--- a/src/css/style.css
+++ b/src/css/style.css
@@ -36,10 +36,15 @@
 
 #container {
   min-width: 100%;
+  padding-bottom: 4rem;
 }
 
 #main-menu {
   background-color: #f3c77e;
+}
+
+#title-img {
+  width: 100%;
 }
 
 #nav-menu {
@@ -47,6 +52,11 @@
   min-width: 100%;
   min-height: 3rem;
   border-radius: 4px;
+}
+
+#cards-container, #box-score-container {
+  max-width: 130rem;
+  margin: auto;
 }
 
 #match-card-schedule {
@@ -59,6 +69,14 @@
 
 #name-tournament-schedule {
   translate: 0.5rem;
+}
+
+#button-menu,
+#button-menu:focus,
+#button-menu:active {
+  outline: none;
+  border: none;
+  box-shadow: none;
 }
 
 #card-foot-schedule{
@@ -82,6 +100,20 @@
 #title-news, #title-highlights {
   color: inherit;
   text-decoration: none;
+}
+
+#lineups-container {
+  max-width: 80%;
+  margin: auto;
+}
+
+.spinner-border{
+  margin-top: 20%;
+  margin-left: 50%;
+}
+
+#highlights-container {
+  justify-content: center;
 }
 
 #cards-container, #title, #lineup-match {
